# parcs8

./: .gitignore  AGENTS.md  CLAUDE.md  Parcs.TCP.sln  Parcs7.sln  README.md  docker-compose.dcproj  docker-compose.yml  launchSettings.json  parcs_gcp_guide.docx  presentation_plan.docx  Стаття (AutoRecovered).docx
.claude/: settings.local.json
Parcs.API/: Parcs.HostAPI.csproj  Program.cs  appsettings.json
Parcs.AzurePortal/: Program.cs
Parcs.Common/: Channel.cs  Daemon.cs  Job.cs  JobStatus.cs  ModuleLoadContext.cs  Parcs.Shared.csproj
Parcs.Core/: Channel.cs  Daemon.cs  IChannel.cs  IChannelExtensions.cs  IChannelTransmissonManager.cs  IHostInfo.cs  IInputReader.cs  IMainModule.cs  IOutputWriter.cs  IPoint.cs  ITransmissonManager.cs  IWorkerModule.cs  Job.cs  JobCompletedEvent.cs  JobCompletionNotification.cs  JobStatus.cs  ModuleOutput.cs  Parcs.Net.csproj  Signal.cs  Unsubscriber.cs
Parcs.Daemon/: Dockerfile  Parcs.Daemon.csproj  Program.cs
Parcs.HostAPI/: Dockerfile.original  Parcs.HostAPI.csproj  Program.cs  appsettings.json
Parcs.Modules/: Parcs.Modules.csproj
Parcs.TCP.Daemon/: Parcs.Daemon.csproj  Parcs.TCP.Daemon.csproj  Program.cs  appsettings.json
Parcs.TCP.Host/: Parcs.TCP.Host.csproj  Program.cs  appsettings.json
misc/mcp_eval/: .env.example  README.md  main.py  pyproject.toml  run_eval.py
misc/mcp_eval/mcp_eval/: agent.py  config.py  console.py  evaluator.py  python_exec.py  tasks.py  tools.py
misc/mcp_eval/memory/: AGENTS.md  SEQUENTIAL.md
misc/mcp_eval/results/: benchmark_results.csv
misc/mcp_eval/skills/parcs-cluster/: SKILL.md
(+880 files in other folders)
